--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Cpath d='M20 80 L50 20 L80 80 Z' stroke='%234F46E5' stroke-width='10' fill='none' stroke-linejoin='round' stroke-linecap='round'/%3E%3Cpath d='M35 70 L65 70' stroke='%233B82F6' stroke-width='10' fill='none' stroke-linecap='round'/%3E%3C/svg%3E" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Godrej Properties - Digital Asset Manager</title>
+    <title>Godrej Properties - AdGen</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,13 +18,14 @@
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.29.0",
     "xlsx": "https://aistudiocdn.com/xlsx@^0.18.5",
     "file-saver": "https://aistudiocdn.com/file-saver@^2.0.5",
-    "exceljs": "https://aistudiocdn.com/exceljs@^4.4.0"
+    "exceljs": "https://aistudiocdn.com/exceljs@^4.4.0",
+    "uuid": "https://aistudiocdn.com/uuid@^9.0.1"
   }
 }
 </script>
 <link rel="stylesheet" href="/index.css">
 </head>
-  <body class="bg-slate-50 antialiased">
+  <body class="dark bg-gray-900 antialiased">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
